[gd_scene format=3 uid="uid://2nn5mnsdx7xi"]

[ext_resource type="Script" uid="uid://b41dh67avnsrf" path="res://BattleManager.gd" id="1_wtcfe"]
[ext_resource type="Texture2D" uid="uid://bh5v02ihpgsxb" path="res://icon.svg" id="2_0e48y"]

[node name="Node2D" type="Node2D" unique_id=882799742]

[node name="BattleManager" type="Node" parent="." unique_id=315060686]
script = ExtResource("1_wtcfe")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1271369561]

[node name="HPLabel" type="Label" parent="CanvasLayer" unique_id=86886459]
modulate = Color(0.12540002, 0.57, 0.3699301, 1)
self_modulate = Color(2.6471912e-06, 0.83383065, 0.35735303, 1)
show_behind_parent = true
top_level = true
offset_right = 40.0
offset_bottom = 25.0
metadata/_edit_use_anchors_ = true

[node name="GoldLabel" type="Label" parent="CanvasLayer" unique_id=2070027480]
offset_left = 191.0
offset_right = 231.0
offset_bottom = 33.0

[node name="InventoryButton" type="Button" parent="CanvasLayer" unique_id=1178579393]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "INVENTORY"

[node name="InventoryWindow" type="Panel" parent="CanvasLayer" unique_id=717779267]
visible = false
offset_left = 41.0
offset_top = 89.0
offset_right = 113.0
offset_bottom = 149.0

[node name="ItemList" type="ItemList" parent="CanvasLayer/InventoryWindow" unique_id=2039248102]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EnemyHPBar" type="ProgressBar" parent="CanvasLayer" unique_id=1846545664]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -13.5
offset_right = 2.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="EnemySprite" type="Sprite2D" parent="CanvasLayer" unique_id=1854829240]
position = Vector2(572, 399)
texture = ExtResource("2_0e48y")
